--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "movie-diary-api",
   "version": "1.0.0",
   "description": "movie-diary-api",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "Hezron Nyamboga",
   "license": "ISC",
@@ -16,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-async-handler": "^1.2.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
